# homework

./: .gitignore  README.md  main.py  mylog.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_external_api_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  masks.py  processing.py  string_search_trans.py  transactions_func.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_string_search_trans.py  test_utils.py  test_widget.py
