[project]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Marat Ibraev",email = "ibraev.08@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[tool.mypy]
exclude = '.venv'
show_error_codes = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
no_implicit_optional = true
allow_redefinition = true
